[package]
name = "advanced-server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework dependencies
pulseengine-mcp-cli = { workspace = true, features = ["cli", "derive"] }
pulseengine-mcp-protocol = { workspace = true }
pulseengine-mcp-server = { workspace = true }

# Core dependencies
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
