[package]
name = "cli-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework CLI
pulseengine-mcp-cli = { workspace = true, features = ["cli", "derive"] }
pulseengine-mcp-protocol = { workspace = true }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[[bin]]
name = "example-server"
path = "src/main.rs"
