[package]
name = "conformance-server"
version = "0.1.0"
edition = "2021"
description = "MCP conformance test server implementing all required fixtures"

[[bin]]
name = "conformance-server"
path = "src/main.rs"

[dependencies]
pulseengine-mcp-server = { path = "../../mcp-server" }
pulseengine-mcp-protocol = { path = "../../mcp-protocol" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
