[package]
name = "demos"
version = "0.1.0"
edition = "2021"

[dependencies]
pulseengine-mcp-server = { path = "../../mcp-server" }
pulseengine-mcp-protocol = { path = "../../mcp-protocol" }
pulseengine-mcp-logging = { path = "../../mcp-logging" }
pulseengine-mcp-auth = { path = "../../mcp-auth" }
pulseengine-mcp-monitoring = { path = "../../mcp-monitoring" }
pulseengine-mcp-cli = { path = "../../mcp-cli" }

tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rand = "0.8"

[[bin]]
name = "alerting-demo"
path = "src/alerting_demo.rs"

[[bin]]
name = "dashboard-demo"
path = "src/dashboard_demo.rs"
