[package]
name = "error-harmonization-demo"
version = "0.1.0"
edition = "2021"
description = "Demonstrates the harmonized error handling system in PulseEngine MCP"

[features]
default = ["logging"]
logging = ["pulseengine-mcp-protocol/logging"]

[dependencies]
# PulseEngine MCP Framework with error harmonization
pulseengine-mcp-protocol = { path = "../../mcp-protocol", features = ["logging"] }
pulseengine-mcp-server = { path = "../../mcp-server" }
pulseengine-mcp-logging = { path = "../../mcp-logging" }

# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[[bin]]
name = "error-demo"
path = "src/main.rs"
