[package]
name = "hello-mcp-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
wit-bindgen-rt = { version = "0.41", features = ["bitflags"] }

[package.metadata.component]
package = "component:hello-mcp"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
