[package]
name = "hello-world-macros"
version = "0.1.0"
edition = "2024"
description = "Hello World MCP Server using PulseEngine macros"

[features]
default = ["auth"]
auth = ["pulseengine-mcp-macros/auth"]

[dependencies]
# PulseEngine MCP Framework with macros
pulseengine-mcp-macros = { path = "../../mcp-macros", features = ["auth"] }
pulseengine-mcp-protocol = { path = "../../mcp-protocol" }
pulseengine-mcp-server = { path = "../../mcp-server" }
pulseengine-mcp-transport = { path = "../../mcp-transport" }
pulseengine-mcp-auth = { path = "../../mcp-auth" }

# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "hello-world-macros"
path = "src/main.rs"