[package]
name = "hello-world-simplified"
version = "0.1.0"
edition = "2021"
description = "Simplified Hello World MCP Server demonstrating DX improvements"

[dependencies]
# PulseEngine MCP Framework
pulseengine-mcp-protocol = { path = "../../mcp-protocol" }
pulseengine-mcp-server = { path = "../../mcp-server" }
pulseengine-mcp-transport = { path = "../../mcp-transport" }

# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "hello-world-simplified"
path = "src/main.rs"
